add twig template, form and routes for adding a client to a stylist

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -22,7 +22,7 @@
                 <h3>You haven't added any stylists yet! Use the form below to get started!</h3>
             {% endif %}
 <!-- END STYLIST LIST -->
-<!-- START FORM -->
+<!-- START ADD STYLIST FORM -->
             <div class="row">
                 <form class="col s12" action="/add_stylist" method="post">
                     <div class="row">
