--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -28,11 +28,11 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <label for="name">Stylist's Name</label>
-                            <input name="name" type="text" class="validate">
+                            <input name="name" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s6">
                             <label for="phone_number">Stylist's Phone Number</label>
-                            <input name="phone_number" type="tel" class="validate">
+                            <input name="phone_number" type="tel" class="validate"required>
                         </div>
                     </div>
                     <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
