--- a/views/stylist.html.twig
+++ b/views/stylist.html.twig
@@ -11,6 +11,7 @@
         <div class="container">
 <!-- START CLIENT LIST -->
             <h2>{{ stylist.getStylistName }}</h2>
+
             {% if clients is not empty %}
                 <h4>Here are all of {{ stylist.getStylistName }}'s clients:</h4>
                     <ul>
@@ -29,18 +30,18 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <label for="name">Client's Name</label>
-                            <input name="name" type="text" class="validate">
+                            <input name="name" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s6">
                             <label for="phone_number">Client's Phone Number</label>
-                            <input name="phone_number" type="tel" class="validate">
+                            <input name="phone_number" type="tel" class="validate" required>
                         </div>
                     </div>
                     <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
                 </form>
             </div>
 <!-- END FORM -->
-            <p><a href="/">Click here</a> to go back to your homepage.</p>
+            <p><a href="/">Click here</a> to go back to your homepage or <a href="/stylist/{{ stylist.getId }}/edit">click here</a> to edit or delete {{ stylist.getStylistName }}'s info.</p>
         </div>
     </body>
 </html>
