--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -16,8 +16,8 @@
 <!-- START STYLIST EDIT FORM -->
             <div class="row">
                 <form class="col s12" action="/stylist/{{ stylist.getId }}" method="post">
-                    <input type="hidden" name="stylist_id" value="{{ stylist.getId }}">
                     <input type="hidden" name="_method" value="patch">
+                    <input type="hidden" name="stylist_id" value="{{ stylist.getId }}">
                     <div class="row">
                         <div class="input-field col s6">
                             <label for="name">Stylist's Name</label>
@@ -32,6 +32,15 @@
                 </form>
             </div>
 <!-- END FORM -->
+            <h5>Delete this stylist and their clients from your database here:</h5>
+<!-- START STYLIST DELETE -->
+            <div class="row">
+                <form class="col s12" action="/stylist/{{ stylist.getId }}/deleted" method="post">
+                    <input type="hidden" name="_method" value="delete">
+                    <input type="hidden" name="stylist_id" value="{{ stylist.getId }}">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Delete!</button>
+                </form>
+            </div>
             <p><a href="/">Click here</a> to go back to the homepage or <a href="/stylist/{{ stylist.getId }}">here</a> to go back to {{ stylist.getStylistName }}'s client list.</p>
         </div>
     </body>
