--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+        <link rel="stylesheet" href="/css/styles.css" type="text/css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
         <title>Stylists | Fadeaway Salon</title>
@@ -12,7 +13,7 @@
             <h1>Fadeaway Salon</h1>
 <!-- START STYLIST LIST -->
             {% if stylists is not empty %}
-                <h1>Here are all of your stylists:</h1>
+                <h3>Here are all of your stylists:</h3>
                 <ul>
                     {% for stylist in stylists %}
                         <li><a href="/stylist/{{ stylist.getId }}">{{ stylist.getStylistName }}</a> --- <a href="tel:+1{{  stylist.getStylistPhoneNumber }}"> {{ stylist.getStylistPhoneNumber }}</a></li>
@@ -35,7 +36,7 @@
                             <input name="phone_number" type="tel" class="validate"required>
                         </div>
                     </div>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                    <button class="btn waves-effect waves-light submit-button" type="submit" name="action">Submit</button>
                 </form>
             </div>
 <!-- END FORM -->
