--- a/views/stylist.html.twig
+++ b/views/stylist.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+        <link rel="stylesheet" href="/css/styles.css" type="text/css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
         <title>{{ stylist.getStylistName }}</title>
@@ -37,11 +38,11 @@
                             <input name="phone_number" type="tel" class="validate" required>
                         </div>
                     </div>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                    <button class="btn waves-effect waves-light submit-button" type="submit" name="action">Submit</button>
                 </form>
             </div>
 <!-- END FORM -->
-            <p><a href="/">Click here</a> to go back to your homepage or <a href="/stylist/{{ stylist.getId }}/edit">click here</a> to edit or delete {{ stylist.getStylistName }}'s info.</p>
+            <p><a href="/" class="bottom-links">Click here</a> to go back to your homepage or <a href="/stylist/{{ stylist.getId }}/edit" class="bottom-links">click here</a> to edit or delete {{ stylist.getStylistName }}'s info.</p>
         </div>
     </body>
 </html>
