update README.md file and add databases to project folder

--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -33,7 +33,7 @@
                 </form>
             </div>
 <!-- END FORM -->
-            <h5>Delete this stylist and their clients from your database here:</h5>
+            <h5>Delete this stylist AND their clients from your database here:</h5>
 <!-- START STYLIST DELETE -->
             <div class="row">
                 <form class="col s12" action="/stylist/{{ stylist.getId }}/deleted" method="post">
